@@ -36,6 +36,8 @@ import javax.security.auth.login.LoginException;
 import javax.ws.rs.ClientErrorException;
 import javax.ws.rs.NotSupportedException;
 import javax.ws.rs.ServerErrorException;
+import javax.ws.rs.core.Response;
+import javax.ws.rs.core.Response.Status;
 import javax.xml.bind.JAXBException;
 
 import org.apache.commons.io.FileDeleteStrategy;
@@ -6121,13 +6123,70 @@ public class TrpMainWidget {
 	}
 	
 	public void changeVersionStatus(String text, TrpPage page) {
-		if (EditStatus.fromString(text).equals(EditStatus.NEW)){
-			//New is only allowed for the first transcript
-			DialogUtil.showInfoMessageBox(getShell(), "Status 'New' reserved for first transcript", "Only the first transcript can be 'New', all others must be at least 'InProgress'");
+		
+		/*
+		 * new strategy for status change
+		 * 1) change the status if it makes sense and is allowed
+		 * 2) if so - save as new version with the new status
+		 */
+		
+		//is the page the one currently loaded in Transkribus
+		boolean isLoaded = (page.getPageId() == Storage.getInstance().getPage().getPageId());
+        //then only the latest transcript can be changed -> page.getCurrentTranscript() gives the latest of this page
+		boolean isLatestTranscript = (page.getCurrentTranscript().getTsId() == Storage.getInstance().getTranscriptMetadata().getTsId());
+		
+		TrpTranscriptMetadata trMd = Storage.getInstance().getTranscript().getMd();
+		if (trMd.getStatus().equals(EditStatus.fromString(text))){
+			DialogUtil.showInfoMessageBox(getShell(), "Status stays the same", "The chosen status " + EditStatus.fromString(text) + " is the same as the old!");
+			return;
+		}
+			
+		if (isLoaded && !isLatestTranscript){
+			DialogUtil.showInfoMessageBox(getShell(), "Status change not allowed", "Status change is only allowed for the latest transcript. Load the latest transcript or save the current transcript.");
+			ui.getStatusCombo().setText(storage.getTranscriptMetadata().getStatus().getStr());
+			ui.getStatusCombo().redraw();
+			return;
+			//logger.debug("page is loaded with transcript ID " + Storage.getInstance().getTranscriptMetadata().getTsId());
+		}
+		
+		if (!AuthUtils.canTranscribe(storage.getRoleOfUserInCurrentCollection())) { // not allowed
+			DialogUtil.showInfoMessageBox(getShell(), "No authorization to change status", "No authorization to change status - keep current status");
+			ui.getStatusCombo().setText(storage.getTranscriptMetadata().getStatus().getStr());
+			ui.getStatusCombo().redraw();
 			return;
 		}
 		
-		int colId = Storage.getInstance().getCollId();
+		if(EditStatus.fromString(text).getValue() >= EditStatus.FINAL.getValue() && !AuthUtils.canManage(storage.getRoleOfUserInCurrentCollection())){
+			DialogUtil.showInfoMessageBox(getShell(), "No authorization to change status", "Status 'Final' and 'GT' can only be set by editors or the owner - keep current status");
+			ui.getStatusCombo().setText(storage.getTranscriptMetadata().getStatus().getStr());
+			ui.getStatusCombo().redraw();
+			return;
+		}
+		
+		if (EditStatus.fromString(text).equals(EditStatus.NEW)){
+			//New is only allowed for the first transcript
+			DialogUtil.showInfoMessageBox(getShell(), "Status 'New' reserved for first transcript", "Only the first transcript can be 'New' - please use another status!");
+			ui.getStatusCombo().setText(storage.getTranscriptMetadata().getStatus().getStr());
+			ui.getStatusCombo().redraw();
+			return;
+		}
+		
+		//set new status and save as new version (includes all transcript changes as well)
+		trMd.setStatus(EditStatus.fromString(text));
+		saveTranscription(false);
+		
+		//this would show another request to the user if he wants to save - too much in my opinion
+		//saveTranscriptDialogOrAutosave();
+			
+		
+
+		/*
+		 * 
+		 * old solution: directly change the status in the database
+		 * no check if the transcript has changed. Therefore the version before the transcript was saved got e.g. status GT
+		 */
+		
+/*		int colId = Storage.getInstance().getCollId();
 		//is the page the one currently loaded in Transkribus
 		boolean isLoaded = (page.getPageId() == Storage.getInstance().getPage().getPageId());
         //then only the latest transcript can be changed -> page.getCurrentTranscript() gives the latest of this page
@@ -6184,7 +6243,7 @@ public class TrpMainWidget {
 		} catch (Exception e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
-		}
+		}*/
 		
 	}
 
