@@ -692,4 +692,5 @@ CHANGES AND BUGFIXES
 1.11.0:
 	-> integrate baseline error rate tool
 	-> improve P2PaLA train dialog - check structures and merged-structures consistency
+	-> status change of one page is checked for reasonableness and creates new transcript version
 	
